packages/fuels-abigen-macro/tests/ui/abigen_macro/invalid_name_value.rs
use fuels_abigen_macro::abigen;

abigen!(Contract(name = true, abi = "some-abi.json",));

fn main() {}
